# NarrativeNexus

./: README.md  main.py  pyproject.toml
app/backend/text_process/cleaned/: cleaned_2025_10_24_15_40_50.txt  cleaned_2025_10_29_22_12_30.txt
backend/routes/: textprocess.py
backend/services/: model.py  processtext.py
frontend/: index.html
